@@ -1,4 +1,5 @@
 4.1
+ * Add guardrail to disallow creation of new COMPACT STORAGE tables (CASSANDRA-17522)
  * change six functions in cqlshlib to native Python 3 (CASSANDRA-17417)
  * reduce hot-path object allocations required to record local/remote requests against the client request metrics (CASSANDRA-17424)
  * Disallow removing DC from system_auth while nodes are active in the DC (CASSANDRA-17478)
